--- a/index.html
+++ b/index.html
@@ -141,21 +141,18 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/loyalty.jpg" alt="" /></a>
-											<h3> Construção de um programa de fidelidade com clusterização de clientes.</h3>
-											<p>Eu usei Python, Estatística e técnicas não-supervisionadas de Machine Learning para
-												segmentar um grupo de clientes com base em sua características de performance de
-												compra, a fim de selecionar grupos de clientes para formar um programa de Fidelidade
-												com o objetivo de aumentar a receita da empresa.E o resultado dessa solução, caso fosse
-												implementar, seria de R$ 15MM de doláres de receita anual.</p>
-												<h4>As ferramentas utilizada foram:</h4>
+											<a href="https://github.com/luizalto/Curry_Company_Project" class="image"><img src="images/loyalty.jpg" alt="" /></a>
+											<h3> Desenvolvimento de um Painel Gerencial para Negócio com o Streamlit</h3>
+											<p>Nesse projeto,os conceitos de Programação em Python,manipulação de dados,pensamento estratégico e lógica ne negócio,junto com ferramentas de desenvolvimento Web como o Streamlit e GitHub,foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de deliveryde comida. </p>
+											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web.O painel pode ser acessado por qualquer dispositivo conectado a internet.</p>
+										        <h4>As ferramentas utilizada foram:</h4>
 															<ul>
-																<li>Git, Github e Gitlab</li>
-																<li>Python, Pandas, Matplotlib e seaborn</li>
-																<li>Jupter Notbook</li>
-																<li>K-Means, Hierarquical CLUSTERIZAÇÃ, DBScan</li>
-																<li>AWS CLOUD(EC2, S3, Postgres, SQLite)</li>
-																<li>Metabase Visualization</li>
+																<li>Python</li>
+																<li>Jupter Lab</li>
+																<li>Terminal</li>
+																<li>Streamlit</li>
+																<li>streamlit Cloud</li>
+																<li>GitHub</li>
 															</ul>
 											<ul class="actions">
 												<li><a href="#" class="button">saiba mais</a></li>
