--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/luizalto/Curry_Company_Project" class="image"><img src="images/loyalty.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/loyalty.jpg" alt="" /></a>
 											<h3> Desenvolvimento de um Painel Gerencial para Negócio com o Streamlit</h3>
 											<p>Nesse projeto,os conceitos de Programação em Python,manipulação de dados,pensamento estratégico e lógica ne negócio,junto com ferramentas de desenvolvimento Web como o Streamlit e GitHub,foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de deliveryde comida. </p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web.O painel pode ser acessado por qualquer dispositivo conectado a internet.</p>
@@ -159,7 +159,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/picture.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/marketplace_food.jpg" alt="" /></a>
 											<h3>Indentificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p> Indentificação de imóveis abaixo do preço médio de venda e definição do preço
 												ideal de venda, a partir de uma análise exploratória de dados em Python.</p>
@@ -172,7 +172,7 @@
 																<li>Streamlit Python framework web.</li>
 															</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">saiba mais</a></li>
+												<li><a href="https://github.com/luizalto/Curry_Company_Project" class="button">saiba mais</a></li>
 											</ul>
 										</article>
 									</div>
