--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/marketplace_food.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/marketplace_food.png" alt="" /></a>
 											<h3> Desenvolvimento de um Painel Gerencial para Negócio com o Streamlit</h3>
 											<p>Nesse projeto,os conceitos de Programação em Python,manipulação de dados,pensamento estratégico e lógica ne negócio,junto com ferramentas de desenvolvimento Web como o Streamlit e GitHub,foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de deliveryde comida. </p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web.O painel pode ser acessado por qualquer dispositivo conectado a internet.</p>
